# VoiceWave-Open-Source-WhisperFlow-Alternative

./: Idea.md  README.md  package.json  tailwind.config.ts
docs/phase1/: phase1-battery-thermal-windows.json
docs/phase3/artifacts/: windows-manual-acceptance-2026-03-08.md
docs/phase4/artifacts/: rollback-drill-2026-03-08.md
docs/phase5/artifacts/: compatibility-matrix-2026-03-08.md  latency-sweep-2026-03-08.json  reliability-metrics-2026-03-08.json  reliability-review-2026-03-08.md  usability-study-2026-03-08.md
scripts/tauri/: prepare-tauri-bundle-windows.ps1
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: state.rs
src-tauri/src/audio/: mod.rs
src-tauri/src/inference/: policy.rs
src-tauri/src/settings/: mod.rs
src/hooks/: useVoiceWave.ts
src/prototype/: constants.ts  types.ts
voicewave-website/: .env.example  README.md
voicewave-website/src/: App.tsx  index.css
voicewave-website/src/components/: CapabilityDeepDive.tsx  FloatingNav.tsx  Header.tsx  Hero.tsx  HoldToTalk.tsx  ScrollDemo.tsx  WebsiteFloatingPill.tsx
