[package]
name = "voicewave_core"
version = "0.2.0"
edition = "2021"
description = "VoiceWave Phase I local core"
default-run = "voicewave_core"

[lib]
name = "voicewave_core_lib"
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[features]
default = ["desktop"]
desktop = ["dep:tauri"]
whisper-cuda = ["whisper-rs/cuda"]

[dependencies]
aes-gcm = "0.10.3"
arboard = "3.5.0"
base64 = "0.22.1"
cpal = "0.15.3"
directories = "5.0.1"
ed25519-dalek = "2.1.1"
rand = "0.8.5"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
tauri = { version = "2.2.5", features = ["tray-icon"], optional = true }
thiserror = "2.0.12"
tokio = { version = "1.44.0", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-util = "0.7.13"
windows-sys = { version = "0.59.0", features = ["Win32_Foundation", "Win32_Media_Audio", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging"] }
whisper-rs = "0.15.1"
ureq = "2.12.0"

[dev-dependencies]
tokio = { version = "1.44.0", features = ["macros", "rt-multi-thread", "sync", "time"] }

[patch.crates-io]
whisper-rs = { path = "../vendor/whisper-rs" }
whisper-rs-sys = { path = "../vendor/whisper-rs-sys" }
